# src/modules/security/interfaces/lambdas/logout/handler.go
@@ -15,15 +15,12 @@ import (
 	"github.com/aws/aws-lambda-go/lambda"
 )
 
-type RefreshTokenRequest struct {
-	RefreshToken string `json:"refresh_token" validate:"required"`
+type LogoutRequest struct {
+	AccessToken string `json:"access_token" validate:"required"`
 }
 
-type RefreshTokenResponse struct {
-	AccessToken  string `json:"access_token"`
-	RefreshToken string `json:"refresh_token"`
-	IdToken      string `json:"id_token"`
-	ExpiresIn    int    `json:"expires_in"`
+type LogoutResponse struct {
+	Success bool `json:"success"`
 }
 
 var cognitoService *cognito.CognitoService
@@ -36,41 +33,38 @@ func init() {
 	}
 }
 
-// @Summary Refresh access token
-// @Description Refresh access token
+// @Summary Logout
+// @Description This endpoint is used to logout a user. It invalidates the refresh token not the access token.
+// @Description The access token could be used until its expiration but you can´t create a new access token with the same refresh token.
 // @Tags security
 // @Accept  json
 // @Produce  json
-// @Param refresh_token body RefreshTokenRequest true "Refresh token"
-// @Success 200 {object} RefreshTokenResponse
+// @Param access_token body LogoutRequest true "Access token"
+// @Success 200 {object} common.Response[LogoutResponse]
 // @Failure 400 {object} common.Response[any]
 // @Failure 401 {object} common.Response[any]
 // @Failure 404 {object} common.Response[any]
 // @Failure 500 {object} common.Response[any]
-// @Router /auth/sessions [patch]
-func refreshTokenLambdaHandler(ctx context.Context, request events.APIGatewayProxyRequest) (events.APIGatewayProxyResponse, error) {
-	var refreshTokenRequest RefreshTokenRequest
-	err := json.Unmarshal([]byte(request.Body), &refreshTokenRequest)
-	if err != nil {
-		return common.JsonResponse[any](400, "", nil, err.Error())
-	}
-	err = common.ValidateRequest(refreshTokenRequest)
+// @Router /auth/sessions [delete]
+func logoutLambdaHandler(ctx context.Context, request events.APIGatewayProxyRequest) (events.APIGatewayProxyResponse, error) {
+	var logoutRequest LogoutRequest
+	err := json.Unmarshal([]byte(request.Body), &logoutRequest)
 	if err != nil {
 		return common.JsonResponse[any](400, "", nil, err.Error())
 	}
 
-	token, err := app.NewRefreshTokenUseCase(cognitoService).RefreshToken(ctx, refreshTokenRequest.RefreshToken)
+	err = common.ValidateRequest(logoutRequest)
+	if err != nil {
+		return common.JsonResponse[any](400, "", nil, err.Error())
+	}
+
+	success, err := app.NewLogoutUseCase(cognitoService).Logout(ctx, logoutRequest.AccessToken)
 	switch true {
 	case err == nil:
-		return common.JsonResponse(200, "", RefreshTokenResponse{
-			AccessToken:  token.AccessToken,
-			RefreshToken: token.RefreshToken,
-			IdToken:      token.IdToken,
-			ExpiresIn:    token.ExpiresIn,
+		return common.JsonResponse(200, "", LogoutResponse{
+			Success: success,
 		}, "")
-	case errors.Is(err, securityDomain.ErrRefreshTokenExpired):
-		return common.JsonResponse[any](401, "", nil, err.Error())
-	case errors.Is(err, securityDomain.ErrInvalidRefreshToken):
+	case errors.Is(err, securityDomain.ErrInvalidAccessToken):
 		return common.JsonResponse[any](400, "", nil, err.Error())
 	case errors.Is(err, securityDomain.ErrUserNotFoundException):
 		return common.JsonResponse[any](404, "", nil, err.Error())
@@ -80,5 +74,5 @@ func refreshTokenLambdaHandler(ctx context.Context, request events.APIGatewayPro
 }
 
 func main() {
-	lambda.Start(refreshTokenLambdaHandler)
+	lambda.Start(logoutLambdaHandler)
 }
